--- a/index.html
+++ b/index.html
@@ -99,10 +99,14 @@
   <div class="left-panel">
     <div class="photo-container">
       <!-- Replace the src value with the URL of your photo -->
-      <img src="https://via.placeholder.com/150" alt="Profile Photo" />
+      <img src="kevinshang.jpg" alt="Profile Photo" />
     </div>
-    <div class="job-title">Your Job Title</div>
-    <div class="affiliation">Your Affiliation</div>
+    <div class="job-title">Joseph J. Ruvane, Jr. Distinguished Professor <br /> 
+      Professor of Operations Management
+    </div>
+    <div class="affiliation">Fuqua School of Business <br \>
+    Duke University
+    </div>
 
     <ul class="nav-links">
       <li><a href="#" onclick="showSection('research')">Research</a></li>
