--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     /* 2. LEFT PANEL (SIDEBAR) */
     .left-panel {
-      width: 250px; /* Adjust this width as needed */
+      width: 320px; /* Adjust this width as needed */
       background-color: #f7f7f7;
       padding: 20px;
       border-right: 1px solid #ccc;
@@ -38,6 +38,7 @@
     }
     .job-title {
       font-weight: bold;
+      font-size: 0.9em
       margin-bottom: 5px;
     }
     .affiliation {
