--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     /* 2. LEFT PANEL (SIDEBAR) */
     .left-panel {
-      width: 400px; /* Adjust this width as needed */
+      width: 360px; /* Adjust this width as needed */
       background-color: #f7f7f7;
       padding: 20px;
       border-right: 1px solid #ccc;
@@ -102,7 +102,7 @@
       <!-- Replace the src value with the URL of your photo -->
       <img src="kevinshang.jpg" alt="Profile Photo" />
     </div>
-    <div class="job-title">Joseph J. Ruvane, Jr. Distinguished Professor <br /> 
+    <div class="job-title">Joseph J. Ruvane, Jr. Distinguished <br /> 
       Professor of Operations Management
     </div>
     <div class="affiliation">Fuqua School of Business <br \>
