--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
     <!-- RESEARCH SECTION -->
     <div id="research" class="section active">
       <h2>Research</h2>
-      <ul class="publications">
-        <li>Paper 1: Title, Journal/Conference, Year</li>
+      <ol class="publications" reversed>
+        <li>1. </li>
         <li>Paper 2: Title, Journal/Conference, Year</li>
         <li>Paper 3: Title, Journal/Conference, Year</li>
         <!-- Add more as needed -->
-      </ul>
+      </ol>
     </div>
 
     <!-- TEACHING SECTION -->
