--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     /* 2. LEFT PANEL (SIDEBAR) */
     .left-panel {
-      width: 340px; /* Adjust this width as needed */
+      width: 320px; /* Adjust this width as needed */
       background-color: #f7f7f7;
       padding: 20px;
       border-right: 1px solid #ccc;
@@ -110,6 +110,8 @@
     </div>
 
     <ul class="nav-links">
+      <li><a href="https://example.com/YourCV.pdf" target="_blank" rel="noopener noreferrer">C.V.</a></li>
+</ul>
       <li><a href="#" onclick="showSection('research')">Research</a></li>
       <li><a href="#" onclick="showSection('teaching')">Teaching</a></li>
       <li><a href="#" onclick="showSection('services')">Services</a></li>
