--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- RESEARCH SECTION -->
     <div id="research" class="section active">
       <h2>Research</h2>
-      <ol class="publications" reversed>
+      <ol class="publications">
         <li>1. </li>
         <li>Paper 2: Title, Journal/Conference, Year</li>
         <li>Paper 3: Title, Journal/Conference, Year</li>
