--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <ul class="nav-links">
-      <li><a href="https://example.com/YourCV.pdf" target="_blank" rel="noopener noreferrer">C.V.</a></li>
+      <li><a href="https://go.fuqua.duke.edu/fw/cms/FuquaWorld/Documents/Vita/khshang.pdf" target="_blank" rel="noopener noreferrer">C.V.</a></li>
       <li><a href="#" onclick="showSection('research')">Research</a></li>
       <li><a href="#" onclick="showSection('teaching')">Teaching</a></li>
       <li><a href="#" onclick="showSection('services')">Services</a></li>
