--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     ul.services,
     ul.honors,
     ul.misc {
-      list-style: decimal inside; /* Numbered lists */
-      margin-left: 40px;
+      list-style: decimal outside; /* Numbered lists */
+      margin-left: 20px;
     }
     li {
       margin-bottom: 5px;
