--- a/index.html
+++ b/index.html
@@ -83,18 +83,15 @@
       margin-bottom: 10px;
     }
     ol.publications,
-    ul.publications,{
-  list-style: decimal outside; /* changed from 'inside' to 'outside' */
-  margin-left: 40px;           /* more left margin so numbers don't spill over */
-  padding-left: 0;             /* optional; keeps the numbers neatly aligned */
+ul.publications,
+ul.teaching,
+ul.services,
+ul.honors,
+ul.misc {
+  list-style: decimal outside; /* Switch to 'outside' so numbers don't get cut off */
+  margin-left: 40px;           /* Increase left margin so numbers have space */
+  padding-left: 0;            /* Keeps numbers neatly aligned with the text */
 }
-    ul.teaching,
-    ul.services,
-    ul.honors,
-    ul.misc {
-      list-style: decimal outside; /* Numbered lists */
-      margin-left: 40px;
-    }
     li {
       margin-bottom: 5px;
     }
