--- a/index.html
+++ b/index.html
@@ -127,38 +127,38 @@ ul.misc {
     <div id="research" class="section active">
       <h2>Research</h2>
       <ol class="publications">
-        <li> Lin, C.-A. K. Shang, and P. Sun. 2024. Dynamic pricing and release time control for service systems. Working paper.</li>
-        <li> Lin, C.-A., K. Shang, P. Sun. 2024. Wait-time based control of single-server queues. Working paper.</li>
-        <li> Huang, J., K. Shang, Y. Yang, W. Zhou. 2024. Data-driven optimal and myopic policies for inventory systems with demand covariates. Working paper.</li>
-        <li> Kao, Y.-M., B. Keskin, K. Shang. 2022. Bayesian dynamic pricing and subscription period selection with unknown customer utility. Working paper.</li>
-        <li> Shang, K., J.-S. Song, S. Zhou. 2023. Single-stage approximations of multiechelon inventory models. Chapter 8 in Research Handbook on Inventory Management. Edward Elgar Publishing Ltd.</li>
-        <li> Shang, K., J.-S. Song. 2023. Inventory models with financial flows. Chapter 12 in Research Handbook on Inventory Management. Edward Elgar Publishing Ltd.</li>
-        <li> Huang, J.-K., K. Shang, Y. Yang, W. Zhou, D. Li. 2024. Taylor approximation of inventory policies for one-warehouse multi-retailer systems with demand feature information. Forthcoming in Management Science.</li>
-        <li> Lin, C.-A., K. Shang, P. Sun. 2023. Wait time based pricing for queues with customer-chosen service times. Management Science 69(4) 2127-2146.</li>
-        <li> Kao, Y.-M., B. Keskin, K. Shang. 2022. Impact of information asymmetry and capacity constraints on business interruption insurance. Management Science 68(4) 2824-2841.</li>
-        <li> Kok, G., K. Shang, S. Yucel. 2020. Capacity investments in renewable and conventional energy sources: The role of operational flexibility. Manufacturing & Service Operations Management 22(5) 925-941.</li>
-        <li> Shang, K. 2019. Cash Beer Game. Foundations and Trends® in Technology, Information and Operations Management 12(2-3) 173-188.</li>
-        <li> Luo, W., K. Shang. 2019. Technical Note: Managing inventory for firms with trade credit and deficit penalty. Operations Research 67(2) 468-478.</li>
-        <li> Kok, G., K. Shang, S. Yucel. 2018. Impact of electricity pricing policies on renewable energy investments and carbon emissions. Management Science 64(1) 131-148.</li>
-        <li> Chen, L., W. Luo, K. Shang. 2017. Measuring the bullwhip effect: Discrepancy and alignment between information and material flows. Manufacturing & Service Operations Management 19(1) 36-51.</li>
-        <li> Bernstein, F., Y. Li, K. Shang. 2016. A simple heuristic for joint inventory and pricing models with lead time and backorders. Management Science 62(8) 2358-2373.</li>
-        <li> Luo, W., K. Shang. 2015. Joint inventory and cash management for multi-divisional supply chains. Operations Research 63(5) 1098-1116.</li>
-        <li> Shang, K., Z. Tao, S. Zhou. 2015. Optimizing reorder intervals for two-echelon distribution systems with stochastic demand. Operations Research 63(2) 458-475.</li>
-        <li> Kok, G., K. Shang. 2014. Evaluation of supply chains with cycle-count policies and implications on IT investments. European Journal of Operational Research 237 91-105.</li>
-        <li> Shang, K. 2012. Single-stage approximations for optimal policies in serial inventory systems with non-stationary demand. Manufacturing & Service Operations Management 14 414-422.</li>
-        <li> Shang, K. 2011. Simple heuristics for optimal inventory policies in supply chains. Chapter 7 in Tutorials in Operations Research, INFORMS. </li>
-        <li> Shang, K., S. Zhou, G.-J. van Houtum. 2010. Improving supply chain performance: real-time demand information and flexible deliveries. Manufacturing & Service Operations Management 12 430-448.</li>
-        <li> Shang, K., S. Zhou. 2010. Optimal and heuristic echelon (r,nQ,T) policies in serial inventory systems with fixed costs. Operations Research 58 414-427.</li>
-        <li> Shang, K., S. Zhou. 2009. A simple heuristic for echelon (r,nQ,T) policies in serial supply chains. Operations Research Letters 37 433-437.</li>
-        <li> Shang, K., J.-S. Song, P. Zipkin. 2009. Coordination mechanisms in decentralized serial inventory systems with batch ordering. Management Science 55 685-695.</li>
-        <li> Shang, K. 2008. Note: A simple heuristic for serial inventory systems with fixed order costs. Operations Research 56 1039-1043.</li>
-        <li> Kok, G., K. Shang. 2007. Inspection and replenishment policies for systems with inventory record inaccuracy. Manufacturing & Service Operations Management 9 185-205.</li>
-        <li> Shang, K., J.-S. Song. 2007. Supply chains with economies of scale: bounds and approximations. Operations Research 55 843-853.</li>
-        <li> Shang, K., J.-S. Song. 2006. A closed-form approximation for serial inventory systems and its application to system design. Manufacturing & Service Operations Management 8 394-406.</li>
-        <li> Shang, K., J.-S. Song. 2003. Newsvendor bounds and heuristic for optimal inventory policies in serial supply chains. Management Science 49 618-638.</li>
-        <li> Boyaci, T., G. Gallego, K. Shang, J.-S. Song. 2003. Erratum to bounds in “serial production/inventory systems under service constraints”. Manufacturing & Service Operations Management 5 372-374.</li>
-        <li> Kiang, M., K. Shang. 2001. Online purchase decision and its implication on e-tailing strategies. Proceedings of the Annual Conference of the Academy of Marketing Science 212-217.</li>
-        <li>     Kiang, M., T. Raghu, K. Shang. 2000. Marketing on the Internet-who can benefit from an on-line marketing approach?. Decision Support Systems 27 383-393.</li>
+        <li> Lin, C.-A. K. Shang, and P. Sun. 2024. Dynamic pricing and release time control for service systems. <i>Working paper</i>.</li>
+        <li> Lin, C.-A., K. Shang, P. Sun. 2024. Wait-time based control of single-server queues. <i>Working paper</i>.</li>
+        <li> Huang, J., K. Shang, Y. Yang, W. Zhou. 2024. Data-driven optimal and myopic policies for inventory systems with demand covariates. <i>Working paper</i>.</li>
+        <li> Kao, Y.-M., B. Keskin, K. Shang. 2022. Bayesian dynamic pricing and subscription period selection with unknown customer utility. <i>Working paper</i>.</li>
+        <li> Shang, K., J.-S. Song, S. Zhou. 2023. Single-stage approximations of multiechelon inventory models. Chapter 8 in <i>Research Handbook on Inventory Management</i>. Edward Elgar Publishing Ltd.</li>
+        <li> Shang, K., J.-S. Song. 2023. Inventory models with financial flows. Chapter 12 in <i>Research Handbook on Inventory Management</i>. Edward Elgar Publishing Ltd.</li>
+        <li> Huang, J.-K., K. Shang, Y. Yang, W. Zhou, D. Li. 2024. Taylor approximation of inventory policies for one-warehouse multi-retailer systems with demand feature information. Forthcoming in <i>Management Science</i>.</li>
+        <li> Lin, C.-A., K. Shang, P. Sun. 2023. Wait time based pricing for queues with customer-chosen service times. <i>Management Science</i> 69(4) 2127-2146.</li>
+        <li> Kao, Y.-M., B. Keskin, K. Shang. 2022. Impact of information asymmetry and capacity constraints on business interruption insurance. <i>Management Science</i> 68(4) 2824-2841.</li>
+        <li> Kok, G., K. Shang, S. Yucel. 2020. Capacity investments in renewable and conventional energy sources: The role of operational flexibility. <i>Manufacturing & Service Operations Management</i> 22(5) 925-941.</li>
+        <li> Shang, K. 2019. Cash Beer Game. <i>Foundations and Trends® in Technology, Information and Operations Management</i> 12(2-3) 173-188.</li>
+        <li> Luo, W., K. Shang. 2019. Technical Note: Managing inventory for firms with trade credit and deficit penalty. <i>Operations Research</i> 67(2) 468-478.</li>
+        <li> Kok, G., K. Shang, S. Yucel. 2018. Impact of electricity pricing policies on renewable energy investments and carbon emissions. <i>Management Science</i> 64(1) 131-148.</li>
+        <li> Chen, L., W. Luo, K. Shang. 2017. Measuring the bullwhip effect: Discrepancy and alignment between information and material flows. <i>Manufacturing & Service Operations Management</i> 19(1) 36-51.</li>
+        <li> Bernstein, F., Y. Li, K. Shang. 2016. A simple heuristic for joint inventory and pricing models with lead time and backorders. <i>Management Science</i> 62(8) 2358-2373.</li>
+        <li> Luo, W., K. Shang. 2015. Joint inventory and cash management for multi-divisional supply chains. <i>Operations Research</i> 63(5) 1098-1116.</li>
+        <li> Shang, K., Z. Tao, S. Zhou. 2015. Optimizing reorder intervals for two-echelon distribution systems with stochastic demand. <i>Operations Research</i> 63(2) 458-475.</li>
+        <li> Kok, G., K. Shang. 2014. Evaluation of supply chains with cycle-count policies and implications on IT investments. <i>European Journal of Operational Research</i> 237 91-105.</li>
+        <li> Shang, K. 2012. Single-stage approximations for optimal policies in serial inventory systems with non-stationary demand. <i>Manufacturing & Service Operations Management</i> 14 414-422.</li>
+        <li> Shang, K. 2011. Simple heuristics for optimal inventory policies in supply chains. Chapter 7 in <i>Tutorials in Operations Research</i>, INFORMS. </li>
+        <li> Shang, K., S. Zhou, G.-J. van Houtum. 2010. Improving supply chain performance: real-time demand information and flexible deliveries. <i>Manufacturing & Service Operations Management</i> 12 430-448.</li>
+        <li> Shang, K., S. Zhou. 2010. Optimal and heuristic echelon (r,nQ,T) policies in serial inventory systems with fixed costs. <i>Operations Research</i> 58 414-427.</li>
+        <li> Shang, K., S. Zhou. 2009. A simple heuristic for echelon (r,nQ,T) policies in serial supply chains. <i>Operations Research Letters</i> 37 433-437.</li>
+        <li> Shang, K., J.-S. Song, P. Zipkin. 2009. Coordination mechanisms in decentralized serial inventory systems with batch ordering. <i>Management Science</i> 55 685-695.</li>
+        <li> Shang, K. 2008. Note: A simple heuristic for serial inventory systems with fixed order costs. <i>Operations Research</i> 56 1039-1043.</li>
+        <li> Kok, G., K. Shang. 2007. Inspection and replenishment policies for systems with inventory record inaccuracy. <i>Manufacturing & Service Operations Management</i> 9 185-205.</li>
+        <li> Shang, K., J.-S. Song. 2007. Supply chains with economies of scale: bounds and approximations. <i>Operations Research</i> 55 843-853.</li>
+        <li> Shang, K., J.-S. Song. 2006. A closed-form approximation for serial inventory systems and its application to system design. <i>Manufacturing & Service Operations Management</i> 8 394-406.</li>
+        <li> Shang, K., J.-S. Song. 2003. Newsvendor bounds and heuristic for optimal inventory policies in serial supply chains. <i>Management Science</i> 49 618-638.</li>
+        <li> Boyaci, T., G. Gallego, K. Shang, J.-S. Song. 2003. Erratum to bounds in “serial production/inventory systems under service constraints”. <i>Manufacturing & Service Operations Management</i> 5 372-374.</li>
+        <li> Kiang, M., K. Shang. 2001. Online purchase decision and its implication on e-tailing strategies. <i>Proceedings of the Annual Conference of the Academy of Marketing Science</i> 212-217.</li>
+        <li>     Kiang, M., T. Raghu, K. Shang. 2000. Marketing on the Internet-who can benefit from an on-line marketing approach?. <i>Decision Support Systems</i> 27 383-393.</li>
       </ol>
     </div>
 
