--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
     h2 {
       margin-bottom: 10px;
     }
-    ol.publications,
-ul.publications,
+ol.publications,
+ul.publications,{
+  margin-bottom: 1em; /* or 10px, etc. */
+}
 ul.teaching,
 ul.services,
 ul.honors,
