--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
       margin-bottom: 10px;
     }
 ol.publications,
-ul.publications,{
-  margin-bottom: 1em; /* or 10px, etc. */
-}
+ul.publications,
 ul.teaching,
 ul.services,
 ul.honors,
