--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ ul.honors,
 ul.misc {
   list-style: decimal outside; /* Switch to 'outside' so numbers don't get cut off */
   margin-left: 60px;           /* Increase left margin so numbers have space */
+  margin-bottom: 10px;
   padding-left: 0;            /* Keeps numbers neatly aligned with the text */
 }
     li {
