--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ ul.misc {
 
     <ul class="nav-links">
       <li><a href="https://go.fuqua.duke.edu/fw/cms/FuquaWorld/Documents/Vita/khshang.pdf" target="_blank" rel="noopener noreferrer">C.V.</a></li>
+      <li><a href="#" onclick="showSection('Bio')">Bio</a></li>
       <li><a href="#" onclick="showSection('research')">Research</a></li>
       <li><a href="#" onclick="showSection('teaching')">Teaching</a></li>
       <li><a href="#" onclick="showSection('services')">Services</a></li>
@@ -124,6 +125,17 @@ ul.misc {
 
   <!-- RIGHT PANEL -->
   <div class="right-panel">
+    <!-- BIO SECTION -->
+    <div id="bio" class="section">
+      <h2>Bio</h2>
+      <ul class="bio">
+        <li>Course 1: Semester, Year</li>
+        <li>Course 2: Semester, Year</li>
+        <li>Course 3: Semester, Year</li>
+        <!-- Add more as needed -->
+      </ul>
+    </div>
+    
     <!-- RESEARCH SECTION -->
     <div id="research" class="section active">
       <h2>Research</h2>
