--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ ul.misc {
 
     <ul class="nav-links">
       <li><a href="https://go.fuqua.duke.edu/fw/cms/FuquaWorld/Documents/Vita/khshang.pdf" target="_blank" rel="noopener noreferrer">C.V.</a></li>
-      <li><a href="#" onclick="showSection('Bio')">Bio</a></li>
+      <li><a href="#" onclick="showSection('bio')">Bio</a></li>
       <li><a href="#" onclick="showSection('research')">Research</a></li>
       <li><a href="#" onclick="showSection('teaching')">Teaching</a></li>
       <li><a href="#" onclick="showSection('services')">Services</a></li>
