--- a/index.html
+++ b/index.html
@@ -129,13 +129,12 @@ ul.misc {
     <div id="bio" class="section">
   <h2>Bio</h2>
   <p>
-    Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Business Administration at the Fuqua School of Business, Duke University. Professor Shang received his M.B.A. from the University of California, Riverside in 1998 and Ph.D. from University of California, Irvine in 2002.
-  </p>
-      <p>
-Professor Shang's expertise is in supply chain management and inventory  control. His research mainly focuses on developing simple and effective  inventory policies for supply chain systems. Prof. Shang also conducts  research in the interface of operations and finance and renewable energy  systems.
-      </p>
-      <p>
-Professor Shang's research has appeared in several leading management journals, including Management Science, Manufacturing and Service Operations Management, and Operations Research.  Several of his papers received research awards from professional  societies. He has served as an editorial board member for several  leading academic journals.
+    Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Business Administration at the Fuqua School of Business, Duke University. 
+    Professor Shang received his M.B.A. from the University of California, Riverside in 1998 and Ph.D. from University of California, Irvine in 2002. 
+    Professor Shang's expertise is in supply chain management and inventory control. His research mainly focuses on developing simple and effective 
+    inventory policies for supply chain systems. Prof. Shang also conducts research in the interface of operations and finance and renewable energy systems.
+    Professor Shang's research has appeared in several leading management journals, including Management Science, Manufacturing and Service Operations Management, 
+    and Operations Research. Several of his papers received research awards from professional  societies. He has served as an editorial board member for several  leading academic journals.
   </p>
 </div>
 
