--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@ ul.misc {
     <div id="teaching" class="section">
       <h2>Teaching</h2>
       <ul class="teaching">
-        <li>Course 1: Semester, Year</li>
-        <li>Course 2: Semester, Year</li>
-        <li>Course 3: Semester, Year</li>
+        <li>
+          <a href="https://sites.duke.edu/shang/teaching/" target="_blank" rel="noopener noreferrer">
+          Teaching Site
+          </a> 
+        </li>
         <!-- Add more as needed -->
       </ul>
     </div>
