--- a/index.html
+++ b/index.html
@@ -129,12 +129,11 @@ ul.misc {
     <div id="bio" class="section">
   <h2>Bio</h2>
   <p>
-    Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Business Administration at the Fuqua School of Business, Duke University. 
-    Professor Shang received his M.B.A. from the University of California, Riverside in 1998 and Ph.D. from University of California, Irvine in 2002. 
-    Professor Shang's expertise is in supply chain management and inventory control. His research mainly focuses on developing simple and effective 
-    inventory policies for supply chain systems. Prof. Shang also conducts research in the interface of operations and finance and renewable energy systems.
-    Professor Shang's research has appeared in several leading management journals, including Management Science, Manufacturing and Service Operations Management, 
-    and Operations Research. Several of his papers received research awards from professional  societies. He has served as an editorial board member for several  leading academic journals.
+    Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Business Administration at the Fuqua School of Business, Duke University. He earned his M.B.A. from the University of California, Riverside in 1998 
+    and his Ph.D. from the University of California, Irvine in 2002. Professor Shang specializes in supply chain management and inventory control, with a research focus on developing simple yet effective inventory policies 
+    for supply chain systems. His work also explores the intersection of operations and finance, as well as renewable energy systems. His research has been published in top management journals, including Management Science, 
+    Manufacturing & Service Operations Management, and Operations Research. Several of his papers have received prestigious research awards from professional societies. Additionally, he has served on the editorial boards of 
+    multiple leading academic journals.
   </p>
 </div>
 
