--- a/index.html
+++ b/index.html
@@ -202,13 +202,112 @@ ul.misc {
 
     <!-- HONORS SECTION -->
     <div id="honors" class="section">
-      <h2>Honors</h2>
-      <ul class="honors">
-        <li>Honor 1</li>
-        <li>Honor 2</li>
-        <!-- Add more as needed -->
-      </ul>
-    </div>
+  <h2>Honors</h2>
+  <ul class="honors">
+    <li>
+      First Prize, Manufacturing and Service Operations Management Society (MSOM) Student Paper Competition, INFORMS, 2001<br>
+      Title: “Newsvendor Bounds and Heuristic for Optimal Inventory Policies in Serial Supply Chains”
+    </li>
+    <li>
+      Honorable Mention, Junior Faculty Interest Group Paper Competition, INFORMS, 2005<br>
+      Title: “Inspection and Replenishment Policies for Systems with Inventory Record Inaccuracy”
+    </li>
+    <li>
+      Meritorious Service Award, Manufacturing and Service Operations Management, 2007
+    </li>
+    <li>
+      First Prize, The Chinese Scholars Association in Management Science and Engineering Best Paper Award, 2012<br>
+      Title: “Integrating Inventory Replenishment and Cash Payment Decisions in Supply Chains”
+    </li>
+    <li>
+      Meritorious Service Award, Manufacturing and Service Operations Management, 2012
+    </li>
+    <li>
+      Award for Innovation and Excellence in Core Course Teaching, Fuqua School of Business, Daytime MBA, 2013
+    </li>
+    <li>
+      Supervised Student Paper Competition Award<br>
+      Wei Luo, Second Prize, College of Supply Chain Management, Production and Operations Management Society (POMS), 2013<br>
+      Title: “Integrating Inventory Replenishment and Cash Payment Decisions in Supply Chains” (New title: Joint Inventory and Cash Management for Multi-divisional Supply Chains)
+    </li>
+    <li>
+      Second Prize, Li &amp; Fung Best Paper Competition at the International Conference of Operations and Supply Chain Management (ICOSCM), 2013<br>
+      Title: “Integrating Inventory Replenishment and Cash Payment Decisions in Supply Chains” (New title: Joint Inventory and Cash Management for Multi-divisional Supply Chains)
+    </li>
+    <li>
+      Honorable Mention, The Chinese Scholars Association in Management Science and Engineering Best Paper Award, 2013<br>
+      Title: “Managing Inventory Systems with Trade Credit and Payment Defaults”
+    </li>
+    <li>
+      Meritorious Service Award, Manufacturing and Service Operations Management, 2013
+    </li>
+    <li>
+      Second Prize, The Chinese Scholars Association in Management Science and Engineering Best Paper Award, 2014<br>
+      Title: “Measuring the Bullwhip Effect with Material Flow Data: Biases and Remedies”
+    </li>
+    <li>
+      Nominee for Innovation and Excellence in Core Course Teaching, Fuqua School of Business, Daytime MBA, 2015
+    </li>
+    <li>
+      Supervised Student Paper Competition Award<br>
+      Safak Yucel, Winner, Energy, Natural Resources, and the Environment Sector of INFORMS, 2015<br>
+      Title: “Impact of Electricity Pricing Policy on Renewable Energy Investments and Carbon Emissions”
+    </li>
+    <li>
+      Supervised Student Paper Competition Award<br>
+      Safak Yucel, Finalist, Manufacturing and Service Operations Management Society (MSOM) of INFORMS, 2015<br>
+      Title: “Impact of Electricity Pricing Policy on Renewable Energy Investments and Carbon Emissions”
+    </li>
+    <li>
+      Supervised Student Paper Competition Award<br>
+      Safak Yucel, First Prize, College of Sustainable Operations, Production and Operations Management Society (POMS), 2016<br>
+      Title: “Impact of Electricity Pricing Policy on Renewable Energy Investments and Carbon Emissions”
+    </li>
+    <li>
+      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2017, Master of Management Studies: DKU Program
+    </li>
+    <li>
+      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2018, Master of Quantitative Management
+    </li>
+    <li>
+      First Prize, the Instructional Innovation Award Competition of DSI Conference, 2019<br>
+      Title: “Supply Chain Simulation Games: Cash Beer Game”
+    </li>
+    <li>
+      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2020, Master of Quantitative Management
+    </li>
+    <li>
+      Supervised Student Paper Competition Award<br>
+      Chen-An Lin, Honorable Mention, College of Sustainable Operations, Production and Operations Management Society (POMS), 2021<br>
+      Title: “Wait Time Based Pricing for Queues with Customer-Chosen Service Times”
+    </li>
+    <li>
+      Winner, Best Management Science Paper in OM, Manufacturing and Service Operations Management Society of INFORMS, 2021<br>
+      Title: “Impact of Electricity Pricing Policy on Renewable Energy Investments and Carbon Emissions”
+    </li>
+    <li>
+      Supervised Student Paper Competition Award, First Place, Production and Operations Management Society (POMS) International Conference in China, 2022<br>
+      Title: “Taylor Approximation of Inventory Policies for One-Warehouse, Multi-Retailer Systems with Demand Feature Information”
+    </li>
+    <li>
+      Finalist, Best Manufacturing and Service Operations Management Paper Award, INFORMS, 2022<br>
+      Title: “Investments in renewable and conventional energy: The role of operational flexibility.”
+    </li>
+    <li>
+      Winner, the ENRE Best Publication Award in the Area of Environment and Sustainability, Energy, Natural Resources, and Environment Section of INFORMS, 2022<br>
+      Title: “Investments in renewable and conventional energy: The role of operational flexibility.”
+    </li>
+    <li>
+      Finalist, Best Manufacturing and Service Operations Management Paper Award, INFORMS, 2023<br>
+      Title: “Investments in renewable and conventional energy: The role of operational flexibility.”
+    </li>
+    <li>
+      Second Place, Student Paper Competition, the 13th POMS-HK International Conference, Hong Kong, China, January 2024<br>
+      Title: “Taylor approximation of inventory policies for one-warehouse, multi-retailer systems with demand feature information.”
+    </li>
+  </ul>
+</div>
+
 
     <!-- MISCELLANEOUS SECTION -->
     <div id="misc" class="section">
