--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 
     /* 2. LEFT PANEL (SIDEBAR) */
     .left-panel {
-      width: 320px; /* Adjust this width as needed */
-      background-color: #f7f7f7;
-      padding: 20px;
-      border-right: 1px solid #ccc;
-    }
+  width: 250px;
+  background-color: #f7f7f7;
+  padding: 20px;
+  border-right: 1px solid #ccc;
+  text-align: center; /* Added to center-align content */
+}
     .photo-container {
       text-align: center;
       margin-bottom: 20px;
