--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
+      font-family: Calibri, sans-serif;
       display: flex; /* We’ll use a flex container to create side-by-side columns */
       min-height: 100vh;
       margin: 0;
