--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ ul.publications,
 ul.teaching,
 ul.services,
 ul.honors,
-ul.misc {
+ul.others, {
   list-style: decimal outside; /* Switch to 'outside' so numbers don't get cut off */
   margin-left: 60px;           /* Increase left margin so numbers have space */
   margin-bottom: 30px;
@@ -120,7 +120,7 @@ ul.misc {
       <li><a href="#" onclick="showSection('research')">Research</a></li>
       <li><a href="#" onclick="showSection('teaching')">Teaching</a></li>
       <li><a href="#" onclick="showSection('honors')">Honors</a></li>
-      <li><a href="#" onclick="showSection('misc')">Miscellaneous</a></li>
+      <li><a href="#" onclick="showSection('others')">Others</a></li>
     </ul>
   </div>
 
@@ -302,10 +302,10 @@ ul.misc {
 </div>
 
 
-    <!-- MISCELLANEOUS SECTION -->
-    <div id="misc" class="section">
-      <h2>Miscellaneous</h2>
-      <ul class="misc">
+    <!-- OTHERS SECTION -->
+    <div id="others" class="section">
+      <h2>Others</h2>
+      <ul class="others">
         <li>Additional info #1</li>
         <li>Additional info #2</li>
         <!-- Add more as needed -->
