--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ ul.publications,
 ul.teaching,
 ul.services,
 ul.honors,
-ul.others, {
+ul.others {
   list-style: decimal outside; /* Switch to 'outside' so numbers don't get cut off */
   margin-left: 60px;           /* Increase left margin so numbers have space */
   margin-bottom: 30px;
