--- a/index.html
+++ b/index.html
@@ -179,17 +179,32 @@ ul.others {
     </div>
 
     <!-- TEACHING SECTION -->
-    <div id="teaching" class="section">
-      <h2>Teaching</h2>
-      <ul class="teaching">
-        <li>
-          <a href="https://sites.duke.edu/shang/teaching/" target="_blank" rel="noopener noreferrer">
-          Teaching Site
-          </a> 
-        </li>
-        <!-- Add more as needed -->
-      </ul>
-    </div>
+<div id="teaching" class="section">
+  <h2>Teaching</h2>
+
+  <!-- Simulation Games Section -->
+  <h3>Simulation Games</h3>
+  <ul class="teaching">
+    <li>
+      <a href="https://sites.duke.edu/shang/teaching/" target="_blank" rel="noopener noreferrer">
+        Beer Game/Cash Beer Game
+      </a>
+    </li>
+  </ul>
+
+  <!-- Cases Section -->
+  <h3>Cases</h3>
+  <ul class="teaching">
+    <li>
+      <a href="https://example.com/xpeed-case" target="_blank" rel="noopener noreferrer">
+        Xpeed Inc.
+      </a>
+      <br>
+      <em>multi-server queueing case</em>
+    </li>
+  </ul>
+</div>
+
 
     
 
