--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ ul.others {
     
     <!-- RESEARCH SECTION -->
     <div id="research" class="section active">
-      <h2>Research</h2>
+      <h2>Publications</h2>
       <ol class="publications">
         <li> Lin, C.-A. K. Shang, and P. Sun. 2024. Dynamic pricing and release time control for service systems. <i>Working paper</i>.</li>
         <li> Lin, C.-A., K. Shang, P. Sun. 2024. Wait-time based control of single-server queues. <i>Working paper</i>.</li>
