--- a/index.html
+++ b/index.html
@@ -110,9 +110,22 @@ ul.others {
     <div class="job-title">Joseph J. Ruvane, Jr. Distinguished <br /> 
       Professor of Operations Management
     </div>
-    <div class="affiliation">Fuqua School of Business <br \>
-    Duke University
-    </div>
+    <div class="affiliation">
+  Fuqua School of Business <br>
+  Duke University
+</div>
+
+<!-- Contact Information -->
+<div class="contact-info">
+  <p>Email: <a href="mailto:khshang@duke.edu">khshang@duke.edu</a></p>
+  <p>Phone: <a href="tel:+19196607965">(919) 660-7965</a></p>
+  <p>
+    <a href="https://www.linkedin.com/in/kevin-shang-b76b7ba/" target="_blank" rel="noopener noreferrer">
+      LinkedIn 
+    </a>
+  </p>
+</div>
+
 
     <ul class="nav-links">
       <li><a href="https://go.fuqua.duke.edu/fw/cms/FuquaWorld/Documents/Vita/khshang.pdf" target="_blank" rel="noopener noreferrer">C.V.</a></li>
