--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ ul.others {
 
     
     <!-- RESEARCH SECTION -->
-    <div id="research" class="section active">
+    <div id="research" class="section">
       <h2>Publications</h2>
       <ol class="publications">
         <li> Lin, C.-A. K. Shang, and P. Sun. 2024. Dynamic pricing and release time control for service systems. <i>Working paper</i>.</li>
