--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ ul.others {
   <!-- RIGHT PANEL -->
   <div class="right-panel">
     <!-- BIO SECTION -->
-    <div id="bio" class="section">
+    <div id="bio" class="section active">
   <h2>Bio</h2>
   <p>
     Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Business Administration at the Fuqua School of Business, Duke University. He earned his M.B.A. from the University of California, Riverside in 1998 
