--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ ul.others {
   <div class="right-panel">
     <!-- BIO SECTION -->
     <div id="bio" class="section active">
-  <h2>Bio</h2>
+  <h2>About</h2>
   <p>
     Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Business Administration at the Fuqua School of Business, Duke University. He earned his M.B.A. from the University of California, Riverside in 1998 
     and his Ph.D. from the University of California, Irvine in 2002. Professor Shang specializes in supply chain management and inventory control, with a research focus on developing simple yet effective inventory policies 
@@ -149,6 +149,12 @@ ul.others {
     Manufacturing & Service Operations Management, and Operations Research. Several of his papers have received prestigious research awards from professional societies. Additionally, he has served on the editorial boards of 
     multiple leading academic journals.
   </p>
+      <b> 
+  <h2>Research Interests</h2>
+        <b>
+  <h2>Media</h2>
+
+          
 </div>
 
     
