--- a/index.html
+++ b/index.html
@@ -156,13 +156,14 @@ ul.others {
     <!-- RESEARCH SECTION -->
     <div id="research" class="section">
       <h2>Research Interests</h2>
-  <ul>
-    <li>Supply chain management and inventory control</li>
-    <li>Queueing control with pricing</li>
-    <li>Interface of operations and finance</li>
-    <li>Sustainability and energy systems</li>
-    <li>Data analytics and machine learning applications</li>
-  </ul>
+      <ol class="publications">
+  
+        <li>Supply chain management and inventory control</li>
+        <li>Queueing control with pricing</li>
+        <li>Interface of operations and finance</li>
+        <li>Sustainability and energy systems</li>
+        <li>Data analytics and machine learning applications</li>
+  
       <h2>Publications</h2>
       <ol class="publications">
         <li> Lin, C.-A. K. Shang, and P. Sun. 2024. Dynamic pricing and release time control for service systems. <i>Working paper</i>.</li>
