--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@ ul.others {
     <!-- HONORS SECTION -->
     <div id="honors" class="section">
   <h2>Honors</h2>
+
+  <!-- Research Honors -->
+  <h3>Research</h3>
   <ul class="honors">
     <li>
       First Prize, Manufacturing and Service Operations Management Society (MSOM) Student Paper Competition, INFORMS, 2001<br>
@@ -243,18 +246,9 @@ ul.others {
       Honorable Mention, Junior Faculty Interest Group Paper Competition, INFORMS, 2005<br>
       Title: “Inspection and Replenishment Policies for Systems with Inventory Record Inaccuracy”
     </li>
-    <li>
-      Meritorious Service Award, Manufacturing and Service Operations Management, 2007
-    </li>
-    <li>
+     <li>
       First Prize, The Chinese Scholars Association in Management Science and Engineering Best Paper Award, 2012<br>
       Title: “Integrating Inventory Replenishment and Cash Payment Decisions in Supply Chains”
-    </li>
-    <li>
-      Meritorious Service Award, Manufacturing and Service Operations Management, 2012
-    </li>
-    <li>
-      Award for Innovation and Excellence in Core Course Teaching, Fuqua School of Business, Daytime MBA, 2013
     </li>
     <li>
       Supervised Student Paper Competition Award<br>
@@ -270,16 +264,10 @@ ul.others {
       Title: “Managing Inventory Systems with Trade Credit and Payment Defaults”
     </li>
     <li>
-      Meritorious Service Award, Manufacturing and Service Operations Management, 2013
-    </li>
-    <li>
       Second Prize, The Chinese Scholars Association in Management Science and Engineering Best Paper Award, 2014<br>
       Title: “Measuring the Bullwhip Effect with Material Flow Data: Biases and Remedies”
     </li>
-    <li>
-      Nominee for Innovation and Excellence in Core Course Teaching, Fuqua School of Business, Daytime MBA, 2015
-    </li>
-    <li>
+     <li>
       Supervised Student Paper Competition Award<br>
       Safak Yucel, Winner, Energy, Natural Resources, and the Environment Sector of INFORMS, 2015<br>
       Title: “Impact of Electricity Pricing Policy on Renewable Energy Investments and Carbon Emissions”
@@ -295,17 +283,8 @@ ul.others {
       Title: “Impact of Electricity Pricing Policy on Renewable Energy Investments and Carbon Emissions”
     </li>
     <li>
-      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2017, Master of Management Studies: DKU Program
-    </li>
-    <li>
-      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2018, Master of Quantitative Management
-    </li>
-    <li>
       First Prize, the Instructional Innovation Award Competition of DSI Conference, 2019<br>
       Title: “Supply Chain Simulation Games: Cash Beer Game”
-    </li>
-    <li>
-      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2020, Master of Quantitative Management
     </li>
     <li>
       Supervised Student Paper Competition Award<br>
@@ -337,8 +316,42 @@ ul.others {
       Title: “Taylor approximation of inventory policies for one-warehouse, multi-retailer systems with demand feature information.”
     </li>
   </ul>
-</div>
 
+  <!-- Teaching Honors -->
+  <h3>Teaching</h3>
+  <ul class="honors">
+     <li>
+      Award for Innovation and Excellence in Core Course Teaching, Fuqua School of Business, Daytime MBA, 2013
+    </li>
+    <li>
+      Nominee for Innovation and Excellence in Core Course Teaching, Fuqua School of Business, Daytime MBA, 2015
+    </li>
+    <li>
+      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2017, Master of Management Studies: DKU Program
+    </li>
+    <li>
+      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2018, Master of Quantitative Management
+    </li>
+     <li>
+      Award for Innovation and Excellence in Teaching, Fuqua School of Business, 2020, Master of Quantitative Management
+    </li>
+    
+  </ul>
+
+  <!-- Service Honors -->
+  <h3>Service</h3>
+  <ul class="honors">
+    <li>
+      Meritorious Service Award, Manufacturing and Service Operations Management, 2007
+    </li>
+    <li>
+      Meritorious Service Award, Manufacturing and Service Operations Management, 2012
+    </li>
+    <li>
+      Meritorious Service Award, Manufacturing and Service Operations Management, 2013
+    </li>
+  </ul>
+</div>
 
     <!-- OTHERS SECTION -->
     <div id="others" class="section">
