--- a/index.html
+++ b/index.html
@@ -354,11 +354,12 @@ ul.others {
 
     <!-- OTHERS SECTION -->
     <div id="others" class="section">
-      <h2>Others</h2>
+      <h2>Media</h2>
       <ul class="others">
-        <li>Additional info #1</li>
-        <li>Additional info #2</li>
-        <!-- Add more as needed -->
+        <li><a href="https://www.fuqua.duke.edu/duke-fuqua-insights/shang-working-capital?campaign=000000&utm_campaign=ALL_19058-1&utm_source=IntDukeFuqua&utm_medium=Email&utm_content=DukeFuquaInsights" target="_blank" rel="noopener noreferrer">Connecting Operations and Finance Makes Firms More Efficient</a></li>
+        <li><a href="https://www.scmr.com/article/using-machine-learning-to-smartly-stock-grocery-stores" target="_blank" rel="noopener noreferrer">Using Machine Learning to Smartly Stock Grocery Stores</a></li>
+        <li><a href="https://www.fuqua.duke.edu/duke-fuqua-insights/better-business-model-electric-vehicle-charging-stations" target="_blank" rel="noopener noreferrer">A Better Business Model for Electric Vehicle Charging Stations</a></li>
+        <li><a href="https://www.youtube.com/watch?v=-Dh8x-qQfIY" target="_blank" rel="noopener noreferrer">EDGE Chats: Impact of Pricing on Renewable Investments</li>
       </ul>
     </div>
   </div>
