--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ ul.others {
     <div id="bio" class="section active">
   <h2>About</h2>
   <p>
-    Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Business Administration at the Fuqua School of Business, Duke University. He received his MBA from the University of California, Riverside in 1998 
+    Kevin Shang is the Joseph J. Ruvane, Jr. Distinguished Professor of Operations Management at the Fuqua School of Business, Duke University. He received his MBA from the University of California, Riverside in 1998 
     and his Ph.D. from the University of California, Irvine in 2002. Professor Shang specializes in supply chain management and inventory control, with a research focus on developing simple yet effective inventory policies 
     for supply chain systems. His work also explores the intersection of operations and finance, as well as renewable energy systems. His research has been published in top management journals, including Management Science, 
     Manufacturing & Service Operations Management, and Operations Research. Several of his papers have received prestigious research awards from professional societies. Additionally, he has served on the editorial boards of 
